<resources>
    <string name="app_name">socrata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_account_sign_up">Don\'t have a account? Sign up</string>
    <string name="here">here</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_a_account_log_in">Have a account? Log in</string>
    <string name="back">back</string>
    <string name="studying_mad">Studying MAD</string>
    <string name="play_pause">play / pause</string>
    <string name="restart">restart</string>
    <string name="stop">stop</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="username_welcome">Username! 👋</string>
    <string name="this_week">This week</string>
    <string name="studying">studying</string>
    <string name="homework">Homework</string>
    <string name="urgent">Urgent</string>
    <string name="overall">Overall</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="_10">10</string>
    <string name="_3">3</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="add_homework">Add Homework</string>
    <string name="modules">Modules</string>
    <string name="add_module">Add Module</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="_30_00h">30.00h</string>
    <string name="done">Done</string>
    <string name="homework_name">Homework name</string>
    <string name="time_left">Time Left</string>
    <string name="mobile_application_development">Mobile Application Development</string>
    <string name="goal_ad">Goal: AD</string>
    <string name="target_hours_per_week_30h">Target hours (per week): 30h</string>
    <string name="study">Study</string>
    <string name="edit_module">Edit Module</string>
    <string name="delete_module">Delete Module</string>
    <string name="create_module">Create Module</string>
    <string name="module_name">Module Name</string>
    <string name="target_hours_per_week">Target hours (per week)</string>
    <string name="goal">Goal</string>
    <string name="save">Save</string>
    <string-array name="date_frequency_array">
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_update_icon">UpdateIcon</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>